[package]
name = "carbon"
version = "0.1.0"
description = "Created for the Solana Foundation to track carbon credits"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
mpl-token-metadata = { version="1.2.6", features = [ "no-entrypoint" ] }